Fic revieww request errors

--- a/about.html
+++ b/about.html
@@ -31,29 +31,45 @@
     </div>
     <header id="myHeader">
         <div class="bg-white d-flex justify-content-between align-items-center nav-wrapper">
-            <div class="d-none d-md-block"><a href="index.html"><img src="assets/images/logo2.png"
-                        alt="Uchenna tutorials"></a></div>
-            <div class="d-block d-md-none toggle float-left"><svg xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em"
-                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20"
-                    class="iconify font-2x text-dark menu-open" data-icon="dashicons:menu-alt3" data-inline="false"
-                    style="transform: rotate(360deg);">
-                    <path d="M20 5V2H0v3h20zm0 6V8H0v3h20zm0 6v-3H0v3h20z" fill="currentColor"></path>
-                </svg></div>
-            <div class="d-none d-md-inline ">
-                <nav>
-                    <ul class="nav navbar">
-                        <li><a href="index.html" class="mx-3">Home</a></li>
-                        <li><a href="index.html#courses" class="mx-3">Courses</a></li>
-                        <li><a href="index.html#tutors" class="mx-3">Tutors</a></li>
-                        <li><a href="index.html#clients" class="mx-3">Clients</a></li>
-                        <li><a href="about.html" class="mx-3 active">About</a></li>
-                    </ul>
-                </nav>
+            <div class="d-none d-sm-block">
+                <a href="#">
+                    <img src="assets/images/logo2.png" alt="Uchenna tutorials">
+                </a>
             </div>
 
-            <div class=""><a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a></div>
+            <nav class="nav navbar navbar-expand-sm">
+
+                <div class="d-block toggle float-left">
+                    <a href="#" class="navbar-toggler p-0 ml-n4" data-toggle="collapse"
+                        data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            aria-hidden="true" focusable="false" width="1em" height="1em"
+                            preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20"
+                            class="iconify font-2x text-dark menu-open" data-icon="dashicons:menu-alt3"
+                            data-inline="false" style="transform: rotate(360deg);">
+                            <path d="M20 5V2H0v3h40zm0 6V8H0v3h40zm0 6v-3H0v3h40z" fill="currentColor"></path>
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                    <ul class="navbar-nav mr-md-5">
+                        <li><a href="index.html" class="mx-3 nav-link">Home</a></li>
+                        <li><a href="index.html#courses" class="mx-3 nav-link">Courses</a></li>
+                        <li><a href="index.html#tutors" class="mx-3 nav-link">Tutors</a></li>
+                        <li><a href="index.html#clients" class="mx-3 nav-link">Clients</a></li>
+                        <li><a href="about.html" class="mx-3 nav-link">About</a></li>
+
+                    </ul>
+                    <div class="ml-md-5">
+                        <a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a>
+                    </div>
+
+            </nav>
         </div>
+
     </header>
 
     <div class="abt-hero">
