--- a/index.html
+++ b/index.html
@@ -14,48 +14,64 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>TuT</title>
 </head>
 
-<body class="container-fluid p-0">
+<body data-spy="scroll" data-target=".navbar" data-offset="100">
 
     <div class="d-none d-md-block text-right bg-dark text-white top-nav">
-        <i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><a href="#">English</a><a href="#">My Page</a>
+        <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#">English</a>
+        <a href="#">My Page</a>
         <a href="#">Logout</a>
     </div>
     <header id="myHeader">
         <div class="bg-white d-flex justify-content-between align-items-center nav-wrapper">
-            <div class="d-none d-md-block"><img src="assets/images/logo2.png" alt="Uchenna tutorials"></div>
-            <div class="d-block d-md-none toggle float-left"><svg xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em"
-                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20"
-                    class="iconify font-2x text-dark menu-open" data-icon="dashicons:menu-alt3" data-inline="false"
-                    style="transform: rotate(360deg);">
-                    <path d="M20 5V2H0v3h20zm0 6V8H0v3h20zm0 6v-3H0v3h20z" fill="currentColor"></path>
-                </svg></div>
-            <div class="d-none d-md-inline ">
-                <nav>
-                    <ul class="nav navbar">
-                        <li><a href="#" class="mx-3 active links">Home</a></li>
-                        <li><a href="#courses" class="mx-3 links">Courses</a></li>
-                        <li><a href="#tutors" class="mx-3 links">Tutors</a></li>
-                        <li><a href="#clients" class="mx-3 links">Clients</a></li>
-                        <li><a href="about.html" class="mx-3 links">About</a></li>
-                    </ul>
-                </nav>
+            <div class="d-none d-sm-block">
+                <a href="#">
+                    <img src="assets/images/logo2.png" alt="Uchenna tutorials">
+                </a>
             </div>
 
-            <div class=""><a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a></div>
+            <nav class="nav navbar navbar-expand-sm">
+
+                <div class="d-block toggle float-left">
+                    <a href="#" class="navbar-toggler p-0 ml-n4" data-toggle="collapse"
+                        data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            aria-hidden="true" focusable="false" width="1em" height="1em"
+                            preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20"
+                            class="iconify font-2x text-dark menu-open" data-icon="dashicons:menu-alt3"
+                            data-inline="false" style="transform: rotate(360deg);">
+                            <path d="M20 5V2H0v3h40zm0 6V8H0v3h40zm0 6v-3H0v3h40z" fill="currentColor"></path>
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                    <ul class="navbar-nav mr-md-5">
+                        <li><a href="#home" class="mx-3 nav-link active">Home</a></li>
+                        <li><a href="#courses" class="mx-3 nav-link">Courses</a></li>
+                        <li><a href="#tutors" class="mx-3 nav-link">Tutors</a></li>
+                        <li><a href="#clients" class="mx-3 nav-link">Clients</a></li>
+                        <li><a href="about.html" class="mx-3 nav-link">About</a></li>
+                    </ul>
+                    <div class="ml-md-5">
+                        <a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a>
+                    </div>
+
+            </nav>
         </div>
+
     </header>
 
-    <div>
+    <section id="home">
+
         <div class="hero">
             <h3 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h3>
             <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0 wow zoomIn">Uchenna Tutorials</h1>
@@ -63,11 +79,12 @@
                 <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
                     your career start as a professional or beginer, checkout our latest courses. </p>
             </div>
-            <h3 class="pt-4 font-weight-bolder text-dark">99.9 Uptime </h3>
-            <p>@Uchenna TuT your covered</p>
+            <h3 class="pt-4 font-weight-bolder text-white">99.9 Uptime </h3>
+            <p class="text-white">@Uchenna TuT your covered</p>
 
         </div>
-    </div>
+    </section>
+
 
     <!-- Featured courses -->
 
@@ -382,8 +399,9 @@
 
             </div>
 
-            <h4 class="text-center w-100 py-5 text-white"><a href="#"
-                    class="btn btn-danger text-white rounded-0 font-weight-bolder p-3">View all Courses
+            <h4 class="text-center w-100 py-5 text-white">
+                <a href="#" class="btn btn-danger text-white rounded-0 font-weight-bolder">
+                    View all Courses
                 </a>
             </h4>
         </section>
@@ -489,8 +507,7 @@
 
                     <div class="col-4 col-md-4">
                         <figure class="tutors-img">
-                            <img src="assets/images/adams.jpg"
-                                alt="tutor 5 Adams">
+                            <img src="assets/images/adams.jpg" alt="tutor 5 Adams">
                         </figure>
                     </div>
                     <div class="col-8 col-md-8">
