Fix linters errors

--- a/about.html
+++ b/about.html
@@ -60,12 +60,13 @@
                         <li><a href="index.html#courses" class="mx-3 nav-link">Courses</a></li>
                         <li><a href="index.html#tutors" class="mx-3 nav-link">Tutors</a></li>
                         <li><a href="index.html#clients" class="mx-3 nav-link">Clients</a></li>
-                        <li><a href="about.html" class="mx-3 nav-link">About</a></li>
+                        <li><a href="about.html" class="mx-3 nav-link active">About</a></li>
 
                     </ul>
                     <div class="ml-md-5">
                         <a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a>
                     </div>
+                </div>
 
             </nav>
         </div>
