--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         </svg>
                     </a>
                 </div>
+                
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
@@ -64,6 +65,7 @@
                     <div class="ml-md-5">
                         <a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a>
                     </div>
+                </div>
 
             </nav>
         </div>
