--- a/tickets.html
+++ b/tickets.html
@@ -66,6 +66,7 @@
                     <div class="ml-md-5">
                         <a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a>
                     </div>
+                </div>
 
             </nav>
         </div>
