Delete one more file

--- a/tickets.html
+++ b/tickets.html
@@ -206,7 +206,7 @@
                     </tbody>
                 </table>
             </div>
-            <button class="btn btn-danger rounded-0 px-5 py-3 mt-3"> Start Now </button>
+            <button type="button" class="btn btn-danger rounded-0 px-5 py-3 mt-3"> Start Now </button>
         </section>
     </main>
 
