--- a/about.html
+++ b/about.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Anya Martins Uchenna">
     <meta name="keyword" content="Conference, Conference meeting, meeting, live conference">
+
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="U-TuT">
+    <meta name="apple-mobile-web-app-title" content="U-TuT">
+    <meta name="theme-color" content="#EC5242">
+    <meta name="msapplication-navbutton-color" content="#EC5242">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -74,8 +87,7 @@
     </header>
 
     <div class="abt-hero">
-        <h3 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h3>
-        <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0">Uchenna Tutorials</h1>
+        <h1 class="display-4 text-truncate font-weight-bolder p-0">Uchenna Tutorials</h1>
         <div class="col-12 abt-description p-2 bg-light">
             <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
                 your career start as a professional or beginer, checkout our latest courses. </p>
@@ -88,7 +100,7 @@
     <main>
         <section class="abt py-5">
 
-            <h3>Uchenna Tutorials official logo</h3>
+            <h2>Uchenna Tutorials official logo</h2>
             <hr class="my-3">
             <p class="w-50 mx-auto">Please contact us for any further information about Our Plans.
                 <br> info@uchenna-tut.edu</p>
@@ -101,7 +113,7 @@
 
         <section class="abt py-5 px-3 bg-light">
 
-            <h3 class="pb-3">See our community project at Uchenna Tutorials</h3>
+            <h2 class="pb-3">See our community project at Uchenna Tutorials</h2>
             <hr>
             <p class="py-3 px-5">We care about the community where we find iur self, and do our best to contribute to
                 its
