--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Anya Martins Uchenna">
     <meta name="keyword" content="Conference, Conference meeting, meeting, live conference">
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="U-TuT">
+    <meta name="apple-mobile-web-app-title" content="U-TuT">
+    <meta name="theme-color" content="#EC5242">
+    <meta name="msapplication-navbutton-color" content="#EC5242">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -51,7 +62,7 @@
                         </svg>
                     </a>
                 </div>
-                
+
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
@@ -75,8 +86,8 @@
     <section id="home">
 
         <div class="hero">
-            <h3 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h3>
-            <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0 wow zoomIn">Uchenna Tutorials</h1>
+            <h3 class="font-weight-bold p-0"> "Your learning starts here" </h3>
+            <h1 class="display-4 text-truncate font-weight-bolder p-0 wow zoomIn">Uchenna Tutorials</h1>
             <div class="description p-2 bg-light wow zoomIn">
                 <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
                     your career start as a professional or beginer, checkout our latest courses. </p>
@@ -92,7 +103,7 @@
 
     <main>
         <section class="featured-course" id="courses">
-            <h3 class="text-center">Featured Courses</h3>
+            <h2 class="text-center">Featured Courses</h2>
             <hr class="mb-5 mt-3">
             <div class="d-md-flex justify-content-center mt-3 wrapper">
 
