--- a/tickets.html
+++ b/tickets.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Anya Martins Uchenna">
     <meta name="keyword" content="Conference, Conference meeting, meeting, live conference">
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="U-TuT">
+    <meta name="apple-mobile-web-app-title" content="U-TuT">
+    <meta name="theme-color" content="#EC5242">
+    <meta name="msapplication-navbutton-color" content="#EC5242">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -75,7 +86,7 @@
 
     <div>
         <div class="bg-light abt py-5 px-3">
-            <h4 class="font-weight-bold p-0"> Select Plan </h4>
+            <h1 class="font-weight-bold p-0"> Select Plan </h1>
             <hr class="mb-5">
             <div class="step py-2 mx-auto border"> <span class="square p-1 bg-danger"></span> <span
                     class="text-danger step-text mr-1 step-text pl-2">Step 1</span>
@@ -167,7 +178,7 @@
 
     <main>
         <section class="abt py-5">
-            <h3>Select Prefrence</h3>
+            <h2>Select Prefrence</h2>
             <hr>
             <div class="col-md-10 offset-md-1 table-responsive mt-5">
                 <table class="table table-bordered">
