Fix the responsiveness as pointed out by Uduak

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 <body class="container-fluid p-0">
 
     <div class="d-none d-md-block text-right bg-dark text-white top-nav">
-        <i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><a href="#">English</a><a href="#">My Page</a>
+       <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#">English</a><a href="#">My Page</a>
         <a href="#">Logout</a>
     </div>
     <header id="myHeader">
@@ -50,7 +50,7 @@
                 </a>
             </div>
 
-            <nav class="nav navbar navbar-expand-sm">
+            <nav class="nav navbar navbar-expand-md">
 
                 <div class="d-block toggle float-left">
                     <a href="#" class="navbar-toggler p-0 ml-n4" data-toggle="collapse"
