--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="100">
 
-    <div class="d-none d-md-block text-right bg-dark text-white top-nav">
+    <div class="d-none d-lg-block text-right bg-dark text-white top-nav">
         <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#">English</a>
         <a href="#">My Page</a>
@@ -41,13 +41,13 @@
     </div>
     <header id="myHeader">
         <div class="bg-white d-flex justify-content-between align-items-center nav-wrapper">
-            <div class="d-none d-sm-block">
+            <div class="d-none d-md-block">
                 <a href="#">
                     <img src="assets/images/logo2.png" alt="Uchenna tutorials">
                 </a>
             </div>
 
-            <nav class="nav navbar navbar-expand-sm">
+            <nav class="nav navbar navbar-expand-md">
 
                 <div class="d-block toggle float-left">
                     <a href="#" class="navbar-toggler p-0 ml-n4" data-toggle="collapse"
@@ -86,7 +86,7 @@
     <section id="home">
 
         <div class="hero">
-            <h3 class="font-weight-bold p-0"> "Your learning starts here" </h3>
+            <h2 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h2>
             <h1 class="display-4 text-truncate font-weight-bolder p-0 wow zoomIn">Uchenna Tutorials</h1>
             <div class="description p-2 bg-light wow zoomIn">
                 <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
