add some adjustment

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
     <!-- Featured courses -->
 
-    <main>
-        <section class="featured-course" id="courses">
-            <h2 class="text-center">Featured Courses</h2>
+    <main class="container-fluid">
+        <section class="row featured-course" id="courses">
+            <h2 class="text-center w-100 pt-5">Featured Courses</h2>
             <hr class="mb-5 mt-3">
             <div class="d-md-flex justify-content-center mt-3 wrapper">
 
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="mt-1 w">
-                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Git</h5>
+                        <h5 class=" mr-5 mr-md-0 text-md-center">Git</h5>
                     </div>
 
                     <p>Git is a powerful tool for software development it is used for version controling projects and
@@ -313,7 +313,7 @@
                         </svg></div>
 
                     <div class="mr-md-5 mt-1 w">
-                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Ruby</h5>
+                        <h5 class=" mr-5 mr-md-0 text-md-center">Ruby</h5>
                     </div>
 
                     <p class="course-info">
@@ -346,7 +346,7 @@
                                 fill="#FFF" /></svg></div>
 
                     <div class="mr-md-5 mt-1 w">
-                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Css</h5>
+                        <h5 class=" mr-5 mr-md-0 text-md-center">Css</h5>
                     </div>
 
                     <p class="course-info">Css stand for Cascading stylesheet, just as its name implies, its main
@@ -382,11 +382,11 @@
                             <path d="M127.89 155.854v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86z"
                                 fill="#FFF" /></svg></div>
 
-                    <div class="mr-md-5 w">
-                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">HTML</h5>
+                    <div class="mr-md-5 mt-1 w">
+                        <h5 class=" mr-5 mr-md-0 text-md-center">HTML</h5>
                     </div>
 
-                    <p class="course-info mt-md-n5">HTML stands for hypertext markup language, used for structuring the
+                    <p class="course-info">HTML stands for hypertext markup language, used for structuring the
                         web page
                     </p>
                 </div>
@@ -403,7 +403,7 @@
                             </g>
                         </svg></div>
                     <div class="mr-md-5 mt-1 w">
-                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">JS</h5>
+                        <h5 class=" mr-5 mr-md-0 text-md-center">JS</h5>
                     </div>
 
                     <p class="course-info">if the a user must interact with the your web app, then you learn Javascript,
@@ -421,8 +421,8 @@
 
         <!-- Featured tutors -->
 
-        <section class="tutors mt-5 wrapper" id="tutors">
-            <h4 class="text-center font-weight-bold mt-md-5">Featured Tutors</h4>
+        <section class="row tutors mt-5 wrapper" id="tutors">
+            <h4 class="font-weight-bold mt-md-5 w-100 text-center">Featured Tutors</h4>
             <hr class="my-3">
             <div class="d-md-flex m-2">
                 <div class="d-flex bg-light p-0 m-0 mt-2 wow zoomIn">
@@ -536,38 +536,38 @@
 
         </section>
 
-        <section class="bg-dark client-item clients-section-wrapper mt-md-5">
-            <h4 class="text-light text-center pt-5" id="clients">
+        <section class="row bg-dark client-section mt-md-5" id="clients">
+            <h4>
                 Clients
             </h4>
             <hr class="my-2">
-            <div class="client-section">
+            <div class="client-item">
 
-                <a href="#" class="wow zoomIn">
+                <a href="#" class="cols wow zoomIn">
                     <figure>
                         <img src="assets/images/google.png" alt="google">
                     </figure>
                 </a>
 
-                <a href="#" class="wow zoomIn">
+                <a href="#" class="cols wow zoomIn">
                     <figure>
                         <img src="assets/images/mozilla.png" alt="mozilla">
                     </figure>
                 </a>
 
-                <a href="#" class="wow zoomIn">
+                <a href="#" class="cols wow zoomIn">
                     <figure>
                         <img src="assets/images/microsoft.png" class="clients-link" alt="microsoft">
                     </figure>
                 </a>
 
-                <a href="#" class="wow zoomIn">
+                <a href="#" class="cols wow zoomIn">
                     <figure>
                         <img src="assets/images/twitter.png" class="" alt="twitter">
                     </figure>
                 </a>
 
-                <a href="#" class="wow zoomIn">
+                <a href="#" class="cols wow zoomIn">
                     <figure>
                         <img src="assets/images/airbnb.png" alt="">
                     </figure>
