--- a/about.html
+++ b/about.html
@@ -39,12 +39,13 @@
 <body class="container-fluid p-0">
 
     <div class="d-none d-md-block text-right bg-dark text-white top-nav">
-       <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#">English</a><a href="#">My Page</a>
+        <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a
+            href="#">English</a><a href="#">My Page</a>
         <a href="#">Logout</a>
     </div>
     <header id="myHeader">
         <div class="bg-white d-flex justify-content-between align-items-center nav-wrapper">
-            <div class="d-none d-sm-block">
+            <div class="d-none d-md-block">
                 <a href="#">
                     <img src="assets/images/logo2.png" alt="Uchenna tutorials">
                 </a>
