--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Anya Martins Uchenna">
@@ -63,7 +64,6 @@
                     </a>
                 </div>
 
-
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
                     <ul class="navbar-nav mr-md-5">
@@ -97,7 +97,6 @@
 
         </div>
     </section>
-
 
     <!-- Featured courses -->
 
