adjust client section

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <h4>
                 Clients
             </h4>
-            <hr class="my-2">
+            <hr class="mb-2 mt-md-n3">
             <div class="client-item">
 
                 <a href="#" class="cols wow zoomIn">
